; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/host1x/extr_syncpt.c_host1x_syncpt_base_free.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/host1x/extr_syncpt.c_host1x_syncpt_base_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.host1x_syncpt_base = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.host1x_syncpt_base*)* @host1x_syncpt_base_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @host1x_syncpt_base_free(%struct.host1x_syncpt_base* %0) #0 {
  %2 = alloca %struct.host1x_syncpt_base*, align 8
  store %struct.host1x_syncpt_base* %0, %struct.host1x_syncpt_base** %2, align 8
  %3 = load %struct.host1x_syncpt_base*, %struct.host1x_syncpt_base** %2, align 8
  %4 = icmp ne %struct.host1x_syncpt_base* %3, null
  br i1 %4, label %5, label %8

5:                                                ; preds = %1
  %6 = load %struct.host1x_syncpt_base*, %struct.host1x_syncpt_base** %2, align 8
  %7 = getelementptr inbounds %struct.host1x_syncpt_base, %struct.host1x_syncpt_base* %6, i32 0, i32 0
  store i32 0, i32* %7, align 4
  br label %8

8:                                                ; preds = %5, %1
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
